# Subbyx

./: .gitignore  GEMINI.md  Makefile  README.md
scripts/: create_training_data.py  evaluate_rules.py  feature_selection.py  optimize_thresholds.py  pyproject.toml  train_model.py
scripts/data/: clean.py  logger.py
scripts/notebooks/: 00-data.py  01-customers-audit.py  02-checkouts-audit.py  03-charges-audit.py  04-payment-intents-audit.py  05-addresses-audit.py  06-stores-audit.py  07-cross-table-audit.py  08-feature-correlation.py  09-raw-data-analysis.py  logger.py  plotly_utils.py
src/backend/: main.py  pyproject.toml
src/backend/feature_repo/: __init__.py  feature_store.yaml  selected_features.yaml
src/backend/feature_repo/data/: blacklist.json
src/backend/feature_repo/data/sources/: addresses.parquet  card_features.parquet  charge_stats.parquet  charges.parquet  checkout_velocity.parquet  checkouts.parquet  customer_profile.parquet  customers.parquet  geo_time_features.parquet  (+4 more)
src/backend/feature_repo/features/: __init__.py
src/backend/routes/: __init__.py
src/backend/routes/config/: __init__.py  shared.yaml
src/backend/routes/features/: __init__.py  router.py  schema.py
src/backend/routes/fraud/: __init__.py  checkout.py  checkouts.py  config.py  config.yaml  router.py  schemas.py
src/backend/tests/: conftest.py  test_checkout.py  test_registry.py
src/backend/tests/features/: __init__.py  test_each_feature.py  test_feature_retrieval.py  test_model_predictions.py  test_model_scenarios.py
src/backend/tests/providers/: test_customers.py
src/backend/tests/rules/: test_rules_trigger.py  test_segment.py
(+108 files in other folders)
