[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "feast[redis]>=0.40.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.0.0",
    "matplotlib>=3.10.8",
    "mlflow>=2.8.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=5.24.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "joblib>=1.3.0",
    "pyyaml>=6.0.0",
    "pyarrow>=14.0.0",
    "kaleido>=1.2.0",
    "statsmodels>=0.14.0",
]

[tool.ruff]
line-length = 100
exclude = [
    ".venv",
    "__pycache__",
    ".ruff_cache",
    "*.pyc",
    ".git",
]

[tool.ruff.format]
quote-style = "double"
